changed a few files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
     <meta name="msapplication-TileColor" content="#0066cc"/> 
     <meta name="msapplication-TileImage" content="/img/portrait.png"/>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@adamralph">
+    <meta name="twitter:site" content="@rrindam">
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{{ page.description }}">
     <meta name="twitter:image:src" content="https://en.gravatar.com/userimage/63709792/97886c5665a210192809afe773e3400a">
-    <title>{{ page.title }} &#8211; adamralph.com</title>
-    <link rel="alternate" type="application/atom+xml" title="adamralph.com atom feed" href="/feed/" />
+    <title>{{ page.title }} &#8211; arindam.com</title>
+    <link rel="alternate" type="application/atom+xml" title="arindam.com atom feed" href="/feed/" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" />
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <link href="/css/code.css" rel="stylesheet" />
@@ -194,7 +194,7 @@
           </div>
           <a href="/" title="Home"><h1 id ="yo">Arindam Pradhan</h1></a>
           <div id="site-description">
-            <p>I'd rather sip coffee in sweat pants ,cuddle on the couch ,watch movies play games and program in freetime...!!</p>
+            I'd rather sip coffee in sweat pants ,cuddle on the couch ,watch movies play games and program in freetime...!!
           </div>
         </div>
         <hr />
@@ -288,7 +288,7 @@
           <p>Powered by <a href="http://pages.github.com/">GitHub Pages</a> and <a href="http://jekyllrb.com/">jekyll</a> and <a href="http://getbootstrap.com/2.3.2/">bootstrap</a>. 
           </p>
           <p>
-            <a href="https://github.com/adamralph/adamralph.github.com">Fork me on GitHub</a>.
+            <a href="https://github.com/arindampradhan/blog_rupter">Fork me on GitHub</a>.
           </p>
         </div>
       </div>
@@ -329,7 +329,7 @@
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-9261591-1']);
-      _gaq.push(['_setDomainName', 'adamralph.com']);
+      _gaq.push(['_setDomainName', 'arindam.com']);
       _gaq.push(['_setAllowLinker', true]);
       _gaq.push(['_trackPageview']);
 
