--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,168 +16,11 @@
     <title>{{ page.title }} &#8211; arindam.com</title>
     <link rel="alternate" type="application/atom+xml" title="arindam.com atom feed" href="/feed/" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" />
+    <link href="/css/style.css" rel="stylesheet" media="screen" />
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <link href="/css/code.css" rel="stylesheet" />
     <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-        color: #444;
-        background-image: url("../img/back1.jpg");
-      }
-
-      p {
-        line-height: 1.5em;
-        margin-bottom: 1.5em;
-      }
-
-      h1 {
-        line-height: 1.1em;
-      }
-
-      canvas {
-        -ms-touch-action: double-tap-zoom;
-      }
-
-      .container {
-        max-width: 80em;
-      }
-
-      .container-fluid > hr {
-        margin-bottom: 3em;
-      }
-
-      .badge {
-        background-color: #dfdfdf;
-        color: #999;
-      }
-
-      .sidebar-nav {
-        padding: .75em 0;
-      }
-
-      .post-meta {
-        color: #999;
-        font-size: 0.9em;
-      }
       
-      p.post-meta {
-        margin-bottom: 1.5em;
-      }
-
-      .tag-count {
-        vertical-align: super;
-      }
-      
-      #logo-panel {
-        text-align: center;
-      }
-      
-      #logo {
-        margin-bottom: 2em;
-      }
-
-      #site-description {
-        color: #999;
-        font-weight: 300;
-        font-size: 1.1em;
-      }
-
-      #site-description p {
-        max-width: 12em;
-      }
-
-      #tags {
-        margin-bottom: 2em;
-        text-align: center;
-      }
-
-      #side {
-        margin: 0em;
-      }
-
-      #side .nav-list {
-        padding-left: 0em;
-        padding-right: 0em;
-      }
-
-      #content {
-        padding-left: 3em;
-        padding-right: 3em;
-        margin: 0em;
-      }
-
-      #side2 {
-        margin: 0em;
-      }
-      #side2 .nav-list {
-        padding-left: 0em;
-        padding-right: 0em;
-      }
-      .ribbon:after, .ribbon:before {
-          margin-top:0.5em;
-          content: "";
-          float:left;
-          border:1.5em solid #fff;
-      }
-
-      .ribbon:after {
-          border-right-color:transparent;
-      }
-
-      .ribbon:before {
-          border-left-color:transparent;
-      }
-      .ribbon a:link, .ribbon a:visited { 
-          color:#000;
-          text-decoration:none;
-          float:left;
-          height:3.5em;
-          overflow:hidden;
-      }
-      .ribbon span {
-          background:#fff;
-          display:inline-block;
-          line-height:3em;
-          padding:0 1em;
-          margin-top:0.5em;
-          position:relative;
-
-          -webkit-transition: background-color 0.2s, margin-top 0.2s;  /* Saf3.2+, Chrome */
-          -moz-transition: background-color 0.2s, margin-top 0.2s;  /* FF4+ */
-          -ms-transition: background-color 0.2s, margin-top 0.2s;  /* IE10 */
-          -o-transition: background-color 0.2s, margin-top 0.2s;  /* Opera 10.5+ */
-          transition: background-color 0.2s, margin-top 0.2s;
-      }
-
-      .ribbon a:hover span {
-          background:#FFD204;
-          margin-top:0;
-      }
-
-      .ribbon span:before {
-          content: "";
-          position:absolute;
-          top:3em;
-          left:0;
-          border-right:0.5em solid #9B8651;
-          border-bottom:0.5em solid #fff;
-      }
-
-      .ribbon span:after {
-          content: "";
-          position:absolute;
-          top:3em;
-          right:0;
-          border-left:0.5em solid #9B8651;
-          border-bottom:0.5em solid #fff;
-      }
-      span{
-        font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
-      }
-      #yo {
-        font-family: Geneva, Tahoma, Verdana, sans-serif;
-      }
     </style>
   </head>
   <body background="/img/back.jpg">
@@ -242,7 +85,7 @@
           </div>
           </div>
           
-          <div id="content" class="span8">
+          <div id="content" class="span8" >
   {{ content }}
           </div>
           <div id="side2" class="span2">
@@ -256,6 +99,9 @@
                   <br/>
                   <div >
                     <style type="text/css">
+                      .span8{
+                      background-color: white;
+                      }
                       #tweets{
                         width: 120px;
                         height: 400px;
