--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,42 @@
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <link href="/css/code.css" rel="stylesheet" />
     <style type="text/css">
-      
+        /*==================================================
+         * Effect 8
+         * ===============================================*/
+        .span8
+        {
+            
+            position:relative;
+            -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+               -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+                    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+        }
+        .span8:before, .span8:after
+        {
+          content:"";
+            position:absolute;
+            z-index:-1;
+            -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+            -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+            box-shadow:0 0 20px rgba(0,0,0,0.8);
+            top:10px;
+            bottom:10px;
+            left:0;
+            right:0;
+            -moz-border-radius:100px / 10px;
+            border-radius:100px / 10px;
+        }
+        .span8:after
+        {
+          right:10px;
+            left:auto;
+            -webkit-transform:skew(8deg) rotate(3deg);
+               -moz-transform:skew(8deg) rotate(3deg);
+                -ms-transform:skew(8deg) rotate(3deg);
+                 -o-transform:skew(8deg) rotate(3deg);
+                    transform:skew(8deg) rotate(3deg);
+        }      
     </style>
   </head>
   <body background="/img/back.jpg">
@@ -86,7 +121,9 @@
           </div>
           
           <div id="content" class="span8" >
-  {{ content }}
+            <div>
+              {{ content }}
+            </div>           
           </div>
           <div id="side2" class="span2">
             <div id="sidebar">
