changed title and domain name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
     <meta name="keywords" content="{% for tag in page.tags %}{{ tag }} {% endfor %}.net software development blog" />
     <meta name="description" content="{{ page.title }}" />
     <meta name="application-name" content="Arindam Pradhan"/> 
@@ -13,8 +13,8 @@
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{{ page.description }}">
     <meta name="twitter:image:src" content="https://en.gravatar.com/userimage/63709792/97886c5665a210192809afe773e3400a">
-    <title>{{ page.title }} &#8211; arindam.com</title>
-    <link rel="alternate" type="application/atom+xml" title="arindam.com atom feed" href="/feed/" />
+    <title>{{ page.title }} &#8211; PersonalBlog</title>
+    <link rel="alternate" type="application/atom+xml" title="arindam2u.com atom feed" href="/feed/" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" />
     <link href="/css/style.css" rel="stylesheet" media="screen" />
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet" />
@@ -213,7 +213,7 @@
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-9261591-1']);
-      _gaq.push(['_setDomainName', 'arindam.com']);
+      _gaq.push(['_setDomainName', 'arindam2u.com']);
       _gaq.push(['_setAllowLinker', true]);
       _gaq.push(['_trackPageview']);
 
