--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@ layout: default
 <!--disqus-->
 <script type="text/javascript">
     var disqus_shortname = 'arindam';
-    var disqus_url = "http://www.arindam.com{{ page.url }}";
+    var disqus_url = "http://www.arindam2u.com{{ page.url }}";
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function () {
