changed a few files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
         }      
     </style>
   </head>
-  <body background="/img/back.jpg">
+  <body background="/img/back1.jpg">
     <div class="container">
       <div class="container-fluid">
         <div class="masthead">
@@ -81,7 +81,7 @@
             <div id="sidebar">
             <div id="logo-panel">
               <a href="/about/" title="About me">
-                <img id="logo" src="https://en.gravatar.com/userimage/63709792/97886c5665a210192809afe773e3400a" alt="Arindam Pradhan" width="100" height="100" />
+                <img id="logo" src="https://en.gravatar.com/userimage/63709792/4e2a7df4fad0b84f6b529d4e1856659b.jpg" alt="Arindam Pradhan" width="100" height="100" />
               </a>
             </div>
             <style tyle="text/css">
