--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,84 @@ body {
       #yo {
         font-family: Geneva, Tahoma, Verdana, sans-serif;
       }
+
+
+.span8{
+    background-color: white;
+    }
+    #tweets{
+      width: 120px;
+      height: 400px;
+      top: 0;
+      height: 100%;
+      z-index:99;
+    }
+.span8
+        {
+            
+            position:relative;
+            -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+               -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+                    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+        }
+        .span8:before, .span8:after
+        {
+          content:"";
+            position:absolute;
+            z-index:-1;
+            -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+            -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+            box-shadow:0 0 20px rgba(0,0,0,0.8);
+            top:10px;
+            bottom:10px;
+            left:0;
+            right:0;
+            -moz-border-radius:100px / 10px;
+            border-radius:100px / 10px;
+        }
+        .span8:after
+        {
+          right:10px;
+            left:auto;
+            -webkit-transform:skew(8deg) rotate(3deg);
+               -moz-transform:skew(8deg) rotate(3deg);
+                -ms-transform:skew(8deg) rotate(3deg);
+                 -o-transform:skew(8deg) rotate(3deg);
+                    transform:skew(8deg) rotate(3deg);
+        } 
+
+
+
+
+
+
+/*Small mobile view*/
+@media screen and (max-width: 480px) {
+  .ribbon {
+    display: none !important;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
+
+  .span2 {
+    display: none !important;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
+}
+
+
+@media screen and (max-width: 880px) {
+#logo{
+    display: none !important;
+  }
+  .twitter-timeline{
+    display: none !important;
+  }
+}
