--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,6 @@
     <link href="/css/style.css" rel="stylesheet" media="screen" />
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet" />
     <link href="/css/code.css" rel="stylesheet" />
-    <style type="text/css">
-        /*==================================================
-         * Effect 8
-         * ===============================================*/
-             
-    </style>
   </head>
   <body background="/img/back1.jpg">
     <div class="container">
@@ -165,20 +159,19 @@
         });
       }
     </script>
-    <script type="text/javascript">
+<!-- Tracking ID UA-54765588 -->-1
+ 
+<script type='text/javascript'>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-9261591-1']);
-      _gaq.push(['_setDomainName', 'arindam2u.com']);
-      _gaq.push(['_setAllowLinker', true]);
-      _gaq.push(['_trackPageview']);
+  ga('create', 'UA-54765588-1', 'auto');
+  ga('send', 'pageview');
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+</script>
 
-    </script>
+
   </body>
 </html>
