--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ body {
 
 /*Small mobile view*/
 @media screen and (max-width: 480px) {
-  .ribbon {
+  .ribbon>a:nth-child(1) {
     display: none !important;
     clear: both;
     float: left;
@@ -229,7 +229,14 @@ body {
     width: 28%;
     display: none;
   }
-
+  .ribbon>a:nth-child(4){
+    display: none !important;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
   .span2 {
     display: none !important;
     clear: both;
@@ -238,10 +245,13 @@ body {
     width: 28%;
     display: none;
   }
+  #site-description{
+    display: none !important;
+  }
 }
 
-
-@media screen and (max-width: 880px) {
+/*for tablet view*/
+@media screen and (max-width: 960px) {
 #logo{
     display: none !important;
   }
