--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,10 +69,10 @@
                 </li>
                 <li class="nav-header">Projects</li>
                 <li>
-                  <a href="https://github.com/arindampradhan/Vim_Config">Vim_config</a>
+                  <a href="https://github.com/arindampradhan/ProductHunt_API">ProductHunt_API</a>
                 </li>
                 <li>
-                  <a href="https://github.com/arindampradhan/frame_test">Frame_test</a>
+                  <a href="https://github.com/arindampradhan/course_link">course_link</a>
                 </li>
                 <li>
                   <a href="https://github.com/arindampradhan/py_projects">Py_projects</a>
